# MiniPaxTar

./: .gitignore  404.html  CMakeLists.txt  COMPARISON.md  CONTRIBUTING.md  DoxyFile  README.md  SECURITY.md  doxybook2.json  index.html  minipaxtar.c  minipaxtar.h  mkdocs.yml  sitemap.xml
.githooks/: pre-commit  pre-commit.bat
.github/ISSUE_TEMPLATE/: bug-issue-report.md  feature_request.md
.github/workflows/: docs.yml
api/Classes/structmptar__header/: index.html
api/index_classes/: index.html
api/index_examples/: index.html
api/index_files/: index.html
api/index_groups/: index.html
api/index_namespaces/: index.html
api/index_pages/: index.html
docs/: index.md
docs/api/: STUB.md
docs/guides/: config-defines.md  error-handling.md  pax-format.md  status-codes.md
docs/javascripts/: init-hljs.js
docs/overview/: extracting.md  integration.md  quickstart.md  reading.md  writing.md
docs/stylesheets/: terminal-custom.css
guides/config-defines/: index.html
guides/error-handling/: index.html
guides/pax-format/: index.html
guides/status-codes/: index.html
overview/extracting/: index.html
overview/integration/: index.html
overview/quickstart/: index.html
overview/reading/: index.html
overview/writing/: index.html
scripts/: adjust_doc_links.py  generate_single_header.py  pre_commit.py
search/: search_index.json
stylesheets/: terminal-custom.css
xml/: Doxyfile.xml  group__mptar__data__structure.xml  group__mptar__default__permissions.xml  group__mptar__error__codes.xml  group__mptar__experimental__config.xml  group__mptar__format__limits.xml  group__mptar__format__misc.xml  group__mptar__internal__diagnostics.xml  group__mptar__memory.xml  group__mptar__pax__flags.xml  group__mptar__pax__overhead.xml  group__mptar__primitives.xml  group__mptar__stable__config.xml  group__mptar__status__codes.xml  group__mptar__writer__flags.xml  index.xml  minipaxtar_8c.xml  minipaxtar_8h.xml  structmptar__header.xml  structmptar__memory__cfg.xml  structmptar__metadata.xml  structmptar__opt__time.xml  structmptar__timespec.xml
(+20 files in other folders)
